[tool.poetry]
name = "redgl1kkdit"
version = "0.1.0"
description = ""
authors = ["GL1KK <danya_serov05@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = "^2.0.41"
pytest = "^8.4.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
pyjwt = "^2.10.1"
alembic = "^1.16.1"
authx = "^1.4.3"
passlib = "^1.7.4"
argon2-cffi = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
factory-boy = "^3.3.3"
mypy = "^1.16.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
